Solved linking error with Input::S_Instance and setup mouse + character keycodes based on GLFW

--- a/Asteroid/CMakeLists.txt
+++ b/Asteroid/CMakeLists.txt
@@ -6,12 +6,15 @@ add_library(
 	src/Asteroid/Core.h
 	src/Asteroid/EntryPoint.h
 	src/Asteroid/Input.h
+	src/Asteroid/Input.cpp
+	src/Asteroid/KeyCodes.h
 	src/Asteroid/Layer.h
 	src/Asteroid/Layer.cpp
 	src/Asteroid/LayerStack.h
 	src/Asteroid/LayerStack.cpp
 	src/Asteroid/Log.cpp
 	src/Asteroid/Log.h
+	src/Asteroid/MouseButtonCodes.h
 	src/Asteroid/Window.h
 	src/Asteroid/Events/Event.h
 	src/Asteroid/Events/KeyEvent.h
