Added ImGui features and resolved ImGui linking issue by defining IMGUI_API=__declspec(dllexport) to export symbols to both AsteroidGame and Asteroid

--- a/AsteroidGame/CMakeLists.txt
+++ b/AsteroidGame/CMakeLists.txt
@@ -7,7 +7,9 @@ target_include_directories(AsteroidGame PUBLIC ${ASTEROID_APP_ROOT}/Asteroid/src
 
 target_compile_definitions(AsteroidGame PUBLIC AS_PLATFORM_WINDOWS)
 
-target_link_libraries(AsteroidGame PRIVATE Asteroid)
+target_link_libraries(AsteroidGame PUBLIC 
+	Asteroid 
+)
 
 set_target_properties(AsteroidGame
 	PROPERTIES
